# power-profile-watcher

./: AGENTS.md  Cargo.toml  README.md  power-profile-watcher.service
src/: main.rs
