[package]
name = "power-profile-watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "process"] }
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
zvariant = "4.2.0"
