[package]
name = "power-profile-watcher"
version = "0.1.7"
edition = "2024"
description = "Watches UPower power-source changes and updates power-profiles-daemon automatically"
license = "MIT"
repository = "https://github.com/ethernomad/power-profile-watcher"
readme = "README.md"
keywords = ["linux", "dbus", "power", "daemon", "upower"]
categories = ["command-line-utilities", "os::linux-apis"]

[dependencies]
clap = { version = "4.5.39", features = ["color", "derive"] }
futures-util = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "process"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[profile.release]
lto = "thin"
strip = "symbols"
